[gd_scene load_steps=8 format=3 uid="uid://boxatp25iqco5"]

[ext_resource type="Script" uid="uid://cxynwic6vk8fa" path="res://scripts/hud.gd" id="1_q6r5s"]
[ext_resource type="FontFile" uid="uid://darxorlc5k5ar" path="res://assets/fonts/Comfortaa/Comfortaa-VariableFont_wght.ttf" id="1_qxyl8"]
[ext_resource type="Texture2D" uid="uid://cogs80v6n5brs" path="res://assets/target.png" id="3_awvo7"]
[ext_resource type="Texture2D" uid="uid://doq7wdjdtq8hc" path="res://assets/fuse.png" id="4_bh45k"]
[ext_resource type="Texture2D" uid="uid://c61f65wt81ndh" path="res://assets/key.png" id="5_4h4kd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2woij"]
bg_color = Color(0, 0, 0, 0.65098)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0gtpb"]
bg_color = Color(0, 0, 0, 0.580392)

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q6r5s")

[node name="NarrativeHolder" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Narrative" type="RichTextLabel" parent="NarrativeHolder"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -960.0
offset_top = -220.0
offset_right = 960.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(960, 0)
theme_override_colors/default_color = Color(0, 0.401501, 0.649272, 1)
theme_override_fonts/normal_font = ExtResource("1_qxyl8")
theme_override_font_sizes/normal_font_size = 60
theme_override_styles/background = SubResource("StyleBoxFlat_2woij")
theme_override_styles/normal = SubResource("StyleBoxFlat_0gtpb")
text = "I need a torch."
horizontal_alignment = 1

[node name="AchievementHolder" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Achievement" type="RichTextLabel" parent="AchievementHolder"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -960.0
offset_top = -408.0
offset_right = 960.0
offset_bottom = -258.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(960, 150)
theme_override_colors/default_color = Color(0, 0.401501, 0.649272, 1)
theme_override_fonts/normal_font = ExtResource("1_qxyl8")
theme_override_font_sizes/normal_font_size = 50
theme_override_styles/background = SubResource("StyleBoxFlat_2woij")
theme_override_styles/normal = SubResource("StyleBoxFlat_0gtpb")
horizontal_alignment = 1

[node name="Target" type="TextureRect" parent="."]
unique_name_in_owner = true
modulate = Color(0, 0, 0.666667, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(20, 20)
texture = ExtResource("3_awvo7")

[node name="Achive_Text_Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.0

[node name="Icons" type="Control" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="Fuse" type="Sprite2D" parent="Icons"]
unique_name_in_owner = true
texture_filter = 1
position = Vector2(-260, 59)
scale = Vector2(5, 5)
texture = ExtResource("4_bh45k")

[node name="Key" type="Sprite2D" parent="Icons"]
unique_name_in_owner = true
texture_filter = 1
position = Vector2(-107, 48)
scale = Vector2(11.49, 11.49)
texture = ExtResource("5_4h4kd")

[connection signal="timeout" from="Achive_Text_Timer" to="." method="_on_achive_text_timer_timeout"]
